--- a/nav.css
+++ b/nav.css
@@ -1,9 +1,9 @@
 .navbar {
-     background-color: transparent;
+     background-color: #000;
      border: transparent;
      width: 100%;
+     height: 70px;
      margin-bottom: 0;
-     z-index: 1;
 }
 
 .navbar-default .navbar-toggle,
@@ -52,7 +52,11 @@
 @media (min-width: 768px) {
      .navbar {
           width: 100%;
-          text-align: center;
+          text-align: center;        
+          position: fixed;
+     }
+     #logo {
+          position: fixed;
      }
      .navbar-nav {
           margin-left: 22%;
@@ -62,32 +66,6 @@
      }
      .btn.btn-default.navbar-btn {
           float: right;
-     }
-     .navbar-btn,
-     .navbar-btn:active,
-     .navbar-btn:focus {
-          background: #1a1a1a;
-          border-color: #2f3034 #2f3034 #232427;
-          background-image: -webkit-linear-gradient(top, #060606, #47494f 66%, #060606);
-          background-image: -moz-linear-gradient(top, #060606, #47494f 66%, #060606);
-          background-image: -o-linear-gradient(top, #060606, #47494f 66%, #060606);
-          background-image: linear-gradient(to bottom, #060606, #47494f 66%, #060606);
-          text-shadow: 0 -1px rgba(0, 0, 0, 0.4);
-          border: 1px solid;
-          border-radius: 7px;
-          cursor: pointer;
-          -webkit-box-shadow: inset 0 1px rgba(255, 255, 255, 0.1), inset 0 0 0 1px rgba(255, 255, 255, 0.08), 0 1px 2px rgba(0, 0, 0, 0.25);
-          box-shadow: inset 0 1px rgba(255, 255, 255, 0.1), inset 0 0 0 1px rgba(255, 255, 255, 0.08), 0 1px 2px rgba(0, 0, 0, 0.25);
-     }
-     button a {
-          color: #fff;
-     }
-     .navbar-btn:hover {
-          border-color: #8f0214;
-     }
-     button a:hover {
-          color: #fff;
-          text-decoration: none;
      }
 }
 
