updated home page

--- a/nav.css
+++ b/nav.css
@@ -54,6 +54,7 @@
           width: 100%;
           text-align: center;        
           position: fixed;
+          z-index: 5;
      }
      #logo {
           position: fixed;
