--- a/style.css
+++ b/style.css
@@ -4,20 +4,23 @@ body {
      background-color: #CFD8DC;
 }
 
-#logo {
+#logo,
+.logo-footer {
      position: absolute;
      margin: 10px 20px;
      transition: filter .2s ease-in-out;
      z-index: 99;
 }
 
-#logo img {
+#logo img,
+.logo-footer img {
      height: 50px;
-     background: transparent;
 }
 
 #logo:hover,
-#logo:active {
+#logo:active,
+.logo-footer:hover,
+.logo-footer:active {
      filter: grayscale(10%) brightness(15%) sepia(10%) hue-rotate(-30deg) saturate(10000%) contrast(1);
 }
 
@@ -42,6 +45,42 @@ body {
      -o-background-size: cover;
      background-size: cover;
      height: 80vh;
+}
+
+.cta-container {
+     display: flex;
+     margin-top: 70px;
+     position: relative;
+     height: 70vh;
+     align-items: flex-end;
+     justify-content: center;
+}
+
+.cta-container p,
+.cta-container input {
+     margin-bottom: 1vh;
+}
+
+.cta-container p {
+     font-size: 1.3em;
+     color: #fff;
+}
+
+.cta-container input[type="email"] {
+     border-radius: 10px;
+     min-width: 250px;
+     margin-left: 1vw;
+}
+
+.cta-container input[type="submit"] {
+     border-radius: 10px;
+     margin-left: -55px;
+     background-image: linear-gradient(to bottom, #ff6478, #8f0214 66%, #ff6478);
+     color: #fff;
+}
+
+.cta-container input[type="submit"]:hover {
+     border-color: #8f0214;
 }
 
 .container-fluid .jumbotron {
@@ -75,6 +114,30 @@ body {
      margin: 0 5% 0 5%;
 }
 
+.footer {
+     background-color: #000;
+     height: 70px;
+     width: 100%;
+     padding: 0;
+     position: relative;
+}
+
+.signature {
+     display: inline-block;
+     width: 100%;
+     text-align: center;
+     color: #fff;
+     opacity: 0.3;
+     margin-top: 25px;
+}
+
+.footer .navbar-btn {
+position: absolute;
+     right: 30px;
+     bottom: 10px;
+
+}
+
 /*-------------------------------------------Media Queries*/
 
 @media (max-width: 494px) {
@@ -92,6 +155,10 @@ body {
           padding-left: 0px;
           padding-right: 0px;
      }
+     .cta-container input[type="email"] {
+          min-width: 300px;
+          margin-left: 2vw;
+     }
 }
 
 @media (min-width: 1200px) {
@@ -102,16 +169,28 @@ body {
      .section-home-container h2 {
           margin-bottom: 30px;
      }
+     .boxes-releases {
+          max-width: 30%;
+          margin-bottom: 4vh;
+     }
 }
 
 @media (min-width: 1665px) {
      .img-circle {
           width: 95%;
-          margin: 0 10% 0 10%;
      }
-          .boxes-releases {
-       margin-left: 5%;
-               margin-right: 5%;
+     .boxes-releases {
+          max-width: 30%;
+          margin-left: 5%;
+          margin-right: 5%;
+     }
+}
+
+@media (min-width: 2569px) {
+     .boxes-releases {
+          max-width: 30%;
+          margin-left: 7%;
+          margin-right: 7%;
      }
 }
 
@@ -119,38 +198,3 @@ body {
 
 grey: #CFD8DC;
 red: #8f0214;
-
-/*-------------------------------------------CButtons
-
-BLACK
-     .navbar-btn,
-     .navbar-btn:active,
-     .navbar-btn:focus {
-          background: #1a1a1a;
-          border-color: #2f3034 #2f3034 #232427;
-          background-image: -webkit-linear-gradient(top, #060606, #47494f 66%, #060606);
-          background-image: -moz-linear-gradient(top, #060606, #47494f 66%, #060606);
-          background-image: -o-linear-gradient(top, #060606, #47494f 66%, #060606);
-          background-image: linear-gradient(to bottom, #060606, #47494f 66%, #060606);
-          text-shadow: 0 -1px rgba(0, 0, 0, 0.4);
-          border: 1px solid;
-          border-radius: 7px;
-          cursor: pointer;
-          -webkit-box-shadow: inset 0 1px rgba(255, 255, 255, 0.1), inset 0 0 0 1px rgba(255, 255, 255, 0.08), 0 1px 2px rgba(0, 0, 0, 0.25);
-          box-shadow: inset 0 1px rgba(255, 255, 255, 0.1), inset 0 0 0 1px rgba(255, 255, 255, 0.08), 0 1px 2px rgba(0, 0, 0, 0.25);
-     }
-     button a {
-          color: #fff;
-     }
-     .navbar-btn:hover {
-          border-color: #8f0214;
-     }
-     button a:hover {
-          color: #fff;
-          text-decoration: none;
-     }
-
-
-RED 
-    background-image: linear-gradient(to bottom, #ff6478, #8f0214 66%, #ff6478);
-    *stran "border: 1px solid;"
