--- a/nav.css
+++ b/nav.css
@@ -14,7 +14,7 @@
 }
 
 .navbar-default .navbar-toggle .icon-bar {
-     background-color: #ffffff;
+     background-color: #fff;
      height: 2px;
 }
 
@@ -25,7 +25,7 @@
 
 .navbar-default .navbar-nav>li>a,
 .navbar-default .navbar-nav>li>a:focus {
-     color: #ffffff;
+     color: #fff;
      font-weight: bold;
      background-color: transparent;
      display: block;
@@ -38,21 +38,26 @@
      color: #8f0214;
 }
 
+
 /*-------------------------------------------Media Queries*/
 
 @media (max-width: 767px) {
+     .navbar {
+     z-index: 3;
+     }
      .navbar-collapse {
           background-color: #000;
           opacity: 0.7;
           width: 150px;
           box-shadow: 5px 5px 5px 3px rgba(0, 0, 0, 0.75);
+          z-index: 2;
      }
 }
 
 @media (min-width: 768px) {
      .navbar {
           width: 100%;
-          text-align: center;        
+          text-align: center;
           position: fixed;
           z-index: 5;
      }
@@ -64,6 +69,7 @@
      }
      .navbar-nav li {
           padding-left: 1vw;
+          opacity: 0.95;
      }
      .btn.btn-default.navbar-btn {
           float: right;
