--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ body {
 
 .main-home-container {
      clear: both;
-     background: url("images/main-image.jpg") no-repeat center center fixed;
+     background: url("images/main-image-xs.jpg") no-repeat center center fixed;
      -webkit-background-size: cover;
      -moz-background-size: cover;
      -o-background-size: cover;
@@ -53,14 +53,14 @@ body {
 }
 
 .opaque-overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 80vh;
-    margin-top: -70px;
-    background-color: rgba(0, 0, 0, 0.7);
-    z-index: 2;
+     position: absolute;
+     top: 0;
+     left: 0;
+     width: 100vw;
+     height: 80vh;
+     margin-top: -70px;
+     background-color: rgba(0, 0, 0, 0.7);
+     z-index: 2;
 }
 
 .cta-container {
@@ -75,7 +75,7 @@ body {
 
 .cta-container p,
 .cta-container input {
-     margin-bottom: 1vh;
+     margin-bottom: 10px;
      opacity: 0.95;
      z-index: 3;
 }
@@ -102,7 +102,6 @@ body {
      border-color: #8f0214;
 }
 
-
 /*-------------------------------------------Section-HomePage*/
 
 .container-fluid .jumbotron {
@@ -119,30 +118,36 @@ body {
      font-weight: 700;
 }
 
-.homepage-left-section{
+.homepage-left-section {
      padding: 0;
 }
+
 .section-home-container h2,
-.section-home-container h3, 
+.section-home-container h3,
 .section-home-container h4 {
      padding-top: 1vh;
 }
+
 .projects-homepage h3 {
      color: #8f0214;
      font-weight: 600;
      padding-top: 3vh;
 }
+
 .section-home-container h4 {
      padding-bottom: 15px;
 }
+
 .projects-homepage hr {
      width: 50px;
      border-top-color: #333;
      opacity: 0.5;
 }
+
 .projects-homepage p {
      text-align: justify;
 }
+
 .next-event,
 .latest-mix,
 .latest-releases {
@@ -162,10 +167,13 @@ body {
 
 .back-to-top {
      text-align: center;
+     margin-bottom: 20px;
 }
+
 .back-to-top a {
      color: #fff;
 }
+
 .back-to-top a:hover {
      color: #fff;
 }
@@ -189,11 +197,10 @@ body {
      margin-top: 25px;
 }
 
-.footer .navbar-btn {
-position: absolute;
+.footer .btn-black {
+     position: absolute;
      right: 30px;
-     bottom: 10px;
-
+     bottom: 15px;
 }
 
 /*-------------------------------------------Media Queries*/
@@ -208,6 +215,17 @@ position: absolute;
      }
 }
 
+@media (min-width: 768px) {
+     .main-home-container {
+          background: url("images/main-image.jpg") no-repeat center center fixed;
+          ;
+     }
+     .cta-container p,
+     .cta-container input {
+          margin-bottom: 1vh;
+     }
+}
+
 @media (max-width: 840px) {
      .cta-container p {
           margin-left: 9px;
@@ -215,7 +233,7 @@ position: absolute;
      .cta-container input {
           margin-right: 9px;
      }
-     }
+}
 
 @media (min-width: 992px) {
      .container-fluid .jumbotron {
@@ -227,9 +245,9 @@ position: absolute;
           margin-left: 2vw;
      }
      .homepage-right-section {
-     padding-left: 0;
-     padding-right: 30px;
-}
+          padding-left: 0;
+          padding-right: 30px;
+     }
 }
 
 @media (min-width: 1200px) {
