--- a/nav.css
+++ b/nav.css
@@ -4,6 +4,7 @@
      width: 100%;
      height: 70px;
      margin-bottom: 0;
+     border: 0;
 }
 
 .navbar-default .navbar-toggle,
@@ -26,16 +27,18 @@
 .navbar-default .navbar-nav>li>a,
 .navbar-default .navbar-nav>li>a:focus {
      color: #fff;
-     font-weight: bold;
+     font-weight: 700;
      background-color: transparent;
      display: block;
-     transition: color .2s ease-in-out;
+     transition: color .2s ease-in-out, font-weight .2s ease-in-out;
 }
 
+.navbar-nav li.selected a,
 .navbar-default .navbar-nav a:hover,
 .navbar-default .navbar-nav>li>a:hover,
 .navbar-default .navbar-nav>li>a:active {
      color: #8f0214;
+     font-weight: 900;
 }
 
 
@@ -47,10 +50,12 @@
      }
      .navbar-collapse {
           background-color: #000;
-          opacity: 0.7;
+          opacity: 0.6;
           width: 150px;
           box-shadow: 5px 5px 5px 3px rgba(0, 0, 0, 0.75);
           z-index: 2;
+          border-color: transparent;
+          border: 0;
      }
 }
 
@@ -59,6 +64,8 @@
           width: 100%;
           text-align: center;
           position: fixed;
+          top: 0;
+          left: 0;
           z-index: 5;
      }
      #logo {
