--- a/style.css
+++ b/style.css
@@ -4,6 +4,20 @@ body {
      background-color: #CFD8DC;
 }
 
+html {
+      height: 100%;
+
+}
+
+#page-height {
+     min-height: 100%;
+     position: relative;
+}
+#page-height #footer {
+   position: absolute;
+   bottom: 0;
+}
+
 /*-------------------------------------------Header*/
 
 #logo,
@@ -73,18 +87,22 @@ body {
      justify-content: center;
 }
 
-.cta-container p,
-.cta-container input {
+.cta-container p {
      margin-bottom: 10px;
      opacity: 0.95;
+     font-size: 1.3em;
+     color: #fff;
      z-index: 3;
 }
 
-.cta-container p {
-     font-size: 1.3em;
-     color: #fff;
+#cta-line {
+     position: relative;
 }
-
+#getinfo {
+     position: absolute;
+     right: 0;
+     top: -4px;
+}
 .cta-container input[type="email"] {
      border-radius: 10px;
      min-width: 300px;
@@ -93,7 +111,6 @@ body {
 
 .cta-container input[type="submit"] {
      border-radius: 10px;
-     margin-left: -86px;
      background-image: linear-gradient(to bottom, #ff6478, #8f0214 66%, #ff6478);
      color: #fff;
 }
@@ -116,6 +133,16 @@ body {
 .jumbotron p {
      margin-bottom: 0;
      font-weight: 700;
+}
+
+.section-home-container {
+     max-width: 2200px;
+     margin: 0 auto 70px;
+}
+
+.jumbotron: {
+     max-width: 100vw;
+     text-align: center;
 }
 
 .homepage-left-section {
@@ -178,14 +205,60 @@ body {
      color: #fff;
 }
 
+/*-------------------------------------------Section-Content-Pages-General*/
+
+.page-heading {
+     text-align: center;
+     padding-top: 3vh;
+}
+
+h2 {
+     color: #8f0214;
+     font-variant: small-caps;
+     font-weight: 600;
+}
+
+.page-sub-heading h3 {
+     text-align: center;
+     color: #8f0214;
+     font-variant: small-caps;
+}
+
+.section-page-container {
+     clear: both;
+     padding: 0 5vw 2vh 5vw;
+     max-width: 2200px;
+}
+
+.page-text {
+     text-align: justify;
+     padding-top: 3vh;
+     padding-bottom: 3vh;
+}
+
+
+
+/*-------------------------------------------Section-Image-Pages*/
+
+
+
+.cta-container.cta-page-container {
+     width: 100vw;
+     text-align: center;
+     margin-top: 30px;
+     margin-bottom: 100px;
+     height: auto;
+}
+
+
+
 /*-------------------------------------------Footer*/
 
-.footer {
+#footer {
      background-color: #000;
      height: 70px;
      width: 100%;
      padding: 0;
-     position: relative;
 }
 
 .signature {
@@ -197,7 +270,7 @@ body {
      margin-top: 25px;
 }
 
-.footer .btn-black {
+#footer .btn-black {
      position: absolute;
      right: 30px;
      bottom: 15px;
@@ -216,8 +289,11 @@ body {
 }
 
 @media (min-width: 768px) {
-     .cta-container p,
-     .cta-container input {
+     .section-page-container {
+     clear: both;
+     padding: 70px 5vw 2vh 5vw;
+     }
+     .cta-container p {
           margin-bottom: 1vh;
      }
 }
@@ -225,20 +301,16 @@ body {
 @media (max-width: 840px) {
      .cta-container p {
           margin-left: 9px;
-     }
-     .cta-container input {
           margin-right: 9px;
      }
-}
 
 @media (min-width: 992px) {
      .container-fluid .jumbotron {
           padding-left: 0px;
           padding-right: 0px;
      }
-     .cta-container input[type="email"] {
+     #cta-line {
           min-width: 350px;
-          margin-left: 2vw;
      }
      .homepage-right-section {
           padding-left: 0;
