--- a/buttons.css
+++ b/buttons.css
@@ -17,15 +17,22 @@
      box-shadow: inset 0 1px rgba(255, 255, 255, 0.1), inset 0 0 0 1px rgba(255, 255, 255, 0.08), 0 1px 2px rgba(0, 0, 0, 0.25);
 }
 
-button a {
+.btn.btn-black.btn-samples {
+     border-color: #fff;
+}
+
+button a,
+.btn-samples a {
      color: #fff;
 }
 
-.btn-black:hover {
+.btn-black:hover,
+.btn.btn-black.btn-samples:hover {
      border-color: #8f0214;
 }
 
-button a:hover {
+button a:hover,
+.btn-samples a {
      color: #fff;
      text-decoration: none;
 }
