--- a/style.css
+++ b/style.css
@@ -214,7 +214,7 @@ h2 {
 
 .section-page-container {
      clear: both;
-     padding: 0 5vw 2vh 0vw;
+     padding: 0 5vw 2vh 5vw;
      max-width: 2200px;
      text-align: center;
 }
@@ -229,6 +229,13 @@ h2 {
 
 /*-------------------------------------------Section-Content-Releases*/
 
+.section-page-container-releases {
+     clear: both;
+     padding: 0 5vw 2vh 0vw;
+     max-width: 2200px;
+     text-align: center;
+}
+
 .boxes-releases {
      display: inline-block;
      padding-top: 3vh;
@@ -240,11 +247,18 @@ h2 {
 
 .sample-audio {
      text-align: center;
-}
-
-.sample-audio {
      padding-top: 3vh;
      padding-bottom: 3vh;
+}
+
+.caption-sample {
+     padding-left: 50px;
+}
+
+.releases-samples hr {
+     width: 50px;
+     border-top-color: #333;
+     opacity: 0.5;
 }
 
 /*-------------------------------------------Section-Image-Pages*/
@@ -291,6 +305,10 @@ h2 {
      padding-top: 70px;
           padding-bottom: 120px;
      }
+     .section-page-container-releases {
+     padding-top: 70px;
+          padding-bottom: 120px;
+     }
      .cta-container p {
           margin-bottom: 1vh;
      }
@@ -301,6 +319,7 @@ h2 {
           margin-left: 9px;
           margin-right: 9px;
      }
+}
 
 @media (min-width: 992px) {
      .container-fluid .jumbotron {
@@ -310,6 +329,11 @@ h2 {
      #cta-line {
           min-width: 350px;
      }
+     .sample-audio,
+     .caption-sample {
+          padding-left: 0px;
+          width: 135%;
+}
 }
 
 @media (min-width: 1200px) {
@@ -320,6 +344,17 @@ h2 {
      .section-home-container h2 {
           margin-bottom: 30px;
      }
+     .sample-audio,
+     .caption-sample {
+          width: 140%;
+}
+}
+
+@media (min-width: 1500px) {
+     .sample-audio,
+     .caption-sample {
+          width: 120%;
+} 
 }
 
 @media (min-width: 1609px) {       /* not working? */
