--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ html {
 
 .main-home-container {
      clear: both;
-     background: url("images/main-image.jpg") no-repeat center center fixed;
+     background: url("images/main-image2.jpg") no-repeat center center fixed;
      -webkit-background-size: cover;
      -moz-background-size: cover;
      -o-background-size: cover;
@@ -73,7 +73,7 @@ html {
      width: 100vw;
      height: 80vh;
      margin-top: -70px;
-     background-color: rgba(0, 0, 0, 0.7);
+     background-color: rgba(0, 0, 0, 0.5);
      z-index: 2;
 }
 
@@ -109,6 +109,7 @@ html {
      border-radius: 10px;
      min-width: 300px;
      margin-left: 1vw;
+     color: #333;
 }
 
 .cta-container input[type="submit"] {
@@ -132,13 +133,22 @@ html {
      border-radius: 0;
 }
 
-.jumbotron p {
+.jumbotron p,
+.jumbotron p a {
      margin-bottom: 0;
      font-weight: 700;
+     color: #333;
+     transition: color .2s ease-in-out, font-weight .9s ease-in;
+
+}
+.jumbotron p a:hover {
+     color: #8f0214;
+     font-weight: 800;
+     text-decoration: none;
 }
 
 .section-home-container {
-     max-width: 2200px;
+     max-width: 1800px;
      margin: 0 auto 70px;
 }
 
@@ -252,7 +262,8 @@ hr.transparent {
 
 /*-------------------------------------------Section-Image-General*/
 
-.section-page-container.section-image {
+.section-page-container.section-image.events,
+.section-page-container.previous-events {
      padding-top: 0;
 }
 
@@ -268,7 +279,6 @@ hr.transparent {
      text-align: center;
      margin-bottom: 80px;
      margin-top: 30px;
-     margin-left: 3vw;
 }
 
 #footer {
@@ -309,6 +319,9 @@ hr.transparent {
      .cta-container p {
           margin-bottom: 1vh;
      }
+     .section-home-container {
+          margin-bottom: 9vh;
+     }
 }
 
 @media (max-width: 840px) {
@@ -348,6 +361,9 @@ hr.transparent {
      .section-home-container h2 {
           margin-bottom: 30px;
      }
+     .image-event-homepage {
+     padding-bottom: 4vh;
+}
      .sample-audio,
      .caption-sample {
           width: 140%;
