--- a/style.css
+++ b/style.css
@@ -308,6 +308,10 @@ hr.transparent {
 @media (min-width: 768px) {
      .main-home-container {
      background: url("images/main-image.jpg") no-repeat center center fixed;
+               -webkit-background-size: cover;
+     -moz-background-size: cover;
+     -o-background-size: cover;
+     background-size: cover;
      }
      .section-page-container {
           padding-top: 70px;
