--- a/media-controls.css
+++ b/media-controls.css
@@ -14,6 +14,22 @@ audio::-webkit-media-controls-panel {
      direction: ltr;
      transition: opacity 0.25s linear;
 }
+video::-webkit-media-controls-panel {
+     width: 100%;
+     height: auto;
+     box-sizing: border-box;
+     position: relative;
+     min-height: 25px;
+     -webkit-user-select: none;
+     background-color: transparent;
+     background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, .92) 0, rgba(0, 0, 0, .92) 1px, rgba(89, 89, 89, .92) 1px, rgba(89, 89, 89, .92) 2px, rgba(60, 60, 60, .92) 2px, rgba(35, 35, 35, .92) 12px, rgba(30, 30, 30, .92) 12px, rgba(30, 30, 30, .92) 13px, rgba(25, 25, 25, .92) 13px, rgba(17, 17, 17, .92) 100%);
+     display: -webkit-flex;
+     -webkit-flex-direction: row;
+     -webkit-align-items: center;
+     -webkit-user-select: none;
+     direction: ltr;
+     transition: opacity 0.25s linear;
+}
 
 audio::-webkit-media-controls-play-button {
      background: transparent;
@@ -21,24 +37,29 @@ audio::-webkit-media-controls-play-button {
      margin-right: 1px;
 }
 
+video::-webkit-media-controls-current-time-display,
+video::-webkit-media-controls-time-remaining-display,
 audio::-webkit-media-controls-current-time-display,
 audio::-webkit-media-controls-time-remaining-display {
      color: #fff;
      opacity: 0.5;
 }
 
+video::-internal-media-controls-download-button,
 audio::-internal-media-controls-download-button {
     display: none;
 }
 
+video::-webkit-media-controls-play-button:hover,
+video::-webkit-media-controls-mute-button:hover,
+video::-webkit-media-controls-volume-slider:hover,
 audio::-webkit-media-controls-play-button:hover,
 audio::-webkit-media-controls-mute-button:hover,
 audio::-webkit-media-controls-volume-slider:hover {
      cursor: pointer;
 }
 
-
-
+/**** media controls *** */
 
 audio::-webkit-media-controls-panel
 audio::-internal-media-controls-download-button
@@ -57,3 +78,27 @@ audio::-webkit-media-controls-fullscreen-button
 audio::-webkit-media-controls-rewind-button
 audio::-webkit-media-controls-return-to-realtime-button
 audio::-webkit-media-controls-toggle-closed-captions-button
+
+
+video::-webkit-media-controls-panel
+video::-webkit-media-controls-play-button
+video::-webkit-media-controls-volume-slider-container
+video::-webkit-media-controls-volume-slider
+video::-webkit-media-controls-mute-button
+video::-webkit-media-controls-timeline
+video::-webkit-media-controls-current-time-display
+video::-webkit-full-page-media::-webkit-media-controls-panel
+video::-webkit-media-controls-timeline-container
+video::-webkit-media-controls-time-remaining-display
+video::-webkit-media-controls-seek-back-button
+video::-webkit-media-controls-seek-forward-button
+video::-webkit-media-controls-fullscreen-button
+video::-webkit-media-controls-rewind-button
+video::-webkit-media-controls-return-to-realtime-button
+video::-webkit-media-controls-toggle-closed-captions-button
+
+
+
+*
+*
+*
