--- a/style.css
+++ b/style.css
@@ -141,12 +141,11 @@ html {
      margin-bottom: 0;
      font-weight: 700;
      color: #333;
-     transition: color .2s ease-in-out, font-weight .9s ease-in;
+     transition: color .2s ease-in-out;
 
 }
 .jumbotron p a:hover {
      color: #8f0214;
-     font-weight: 800;
      text-decoration: none;
 }
 
